# toyni-zkvm

./: Cargo.toml  README.md
crates/zkvm-air/: Cargo.toml
crates/zkvm-air/src/: bitwise.rs  constraints.rs  lib.rs  permutation.rs
crates/zkvm-cli/: Cargo.toml
crates/zkvm-cli/src/: asm.rs  main.rs  mini.rs
crates/zkvm-core/: Cargo.toml
crates/zkvm-core/src/: cpu.rs  decode.rs  elf.rs  lib.rs  memory.rs  trace.rs
crates/zkvm-guest/: Cargo.toml  link.ld
crates/zkvm-guest/src/: lib.rs
crates/zkvm-host/: Cargo.toml
crates/zkvm-host/src/: lib.rs
crates/zkvm-io/: Cargo.toml
crates/zkvm-io/src/: lib.rs
crates/zkvm-prover/: Cargo.toml
crates/zkvm-prover/src/: lib.rs
crates/zkvm-verifier/: Cargo.toml
crates/zkvm-verifier/src/: lib.rs
crates/zkvm-verifier/tests/: fri_degree_attack.rs
docs/: isa.md
examples/: fibonacci.mini
examples/fibonacci-rust/guest/: Cargo.toml  build.rs
examples/fibonacci-rust/guest/src/: main.rs
examples/fibonacci-rust/host/: Cargo.toml  build.rs
examples/fibonacci-rust/host/src/: main.rs
examples/heavy-rust/guest/: Cargo.toml
examples/heavy-rust/guest/src/: main.rs
examples/heavy-rust/host/: Cargo.toml
examples/heavy-rust/host/src/: main.rs
