[package]
name = "zkvm-host"
version = "0.1.0"
edition = "2024"

[dependencies]
zkvm-core = { workspace = true }
zkvm-air = { workspace = true }
zkvm-prover = { workspace = true }
zkvm-verifier = { workspace = true }
zkvm-io = { workspace = true }
sha2 = { workspace = true }
toyni = { workspace = true }
